tests/snapshots/regression-boosters-side_effects_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Rifter
ship/capacitorStablePercentage               = 0.000000
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 4.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 9.600000
ship/passiveShieldEffectiveRechargeRate      = 3.517241
ship/passiveShieldRechargeRate               = 2.550000
ship/shieldEffectiveBoostRate                = 57.379310
ship/shieldBoostRate                         = 41.600000
ship/ehp                                     = 2145.801155
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.100000
ship/shieldEhp                               = 659.482750
ship/hullEhp                                 = 652.985058
ship/armorEhp                                = 833.333346
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 34.650000
ship/cpuFree                                 = 97.750000
ship/capacitorDepletesIn                     = 18.000000
ship/capacitorPeakDeltaPercentage            = -154.117647
ship/capacitorPeakDelta                      = -10.916667
ship/capacitorPeakLoad                       = 18.000000
ship/capacitorPeakRecharge                   = 7.083333
ship/alignTime                               = 3.195020
ship/hp                                      = 437.500000
ship/powerOutput                             = 51.250000
ship/powerLoad                               = 16.600000
ship/maxVelocity                             = 456.250000
ship/cpuOutput                               = 162.500000
ship/cpuLoad                                 = 64.750000
ship/rechargeRate                            = 93750.000000
ship/agility                                 = 2.160000
ship/maxTargetRange                          = 28125.000000
ship/scanSpeed                               = 1125.000000
ship/warpCapacitorNeed                       = 0.000001
ship/scanLadarStrength                       = 9.600000
ship/shieldCapacity                          = 478.125000
ship/armorHP                                 = 562.500000
ship/maxResearchGangSize                     = 30.000000
ship/shipBonusMF                             = -37.500000
ship/shieldRechargeRate                      = 468750.000000
ship/capacitorCapacity                       = 265.625000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 825.000000
ship/shipBonusMF2                            = 50.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                 = 200mm AutoCannon II
high_1/state                = active
high_1/speedWithReload      = 35020.832009
high_1/speedOfReload        = 33333.332009
high_1/chargeAmount         = 0.300000
high_1/cycleTime            = 1687.500000
high_1/power                = 3.600000
high_1/cpu                  = 6.750000
high_1/speed                = 1687.500000
high_1/maxRange             = 1275.000000
high_1/damageMultiplier     = 5.479031
high_1/falloff              = 9675.000000
high_1/trackingSpeed        = 393.750000
high_1/barrageDmgMultiplier = 5.479031
high_1/barrageFalloff       = 9675.000000
high_1/heatDamage           = 0.750000

medium_1/type              = Medium Shield Booster II
medium_1/state             = active
medium_1/shieldBoostRate   = 41.600000
medium_1/capacitorPeakLoad = 18.000000
medium_1/cycleTime         = 3000.000000
medium_1/capacitorNeed     = 54.000000
medium_1/shieldBonus       = 124.800000
medium_1/heatDamage        = 0.750000

booster_1/type                             = Standard Blue Pill Booster
booster_1/state                            = offline
booster_1/boosterDuration                  = 3600000.000000
booster_1/boosterEffectChance1             = 0.150000
booster_1/boosterEffectChance2             = 0.150000
booster_1/boosterEffectChance3             = 0.150000
booster_1/boosterEffectChance4             = 0.150000
booster_1/boosterEffectChance5             = 0.150000
booster_1/boosterShieldCapacityPenalty     = -15.000000
booster_1/boosterTurretOptimalRangePenalty = -15.000000
booster_1/boosterAOEVelocityPenalty        = -15.000000
booster_1/boosterCapacitorCapacityPenalty  = -15.000000
