tests/snapshots/regression-burst_projector-sensor_dampening.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Nyx
ship/capacitorStablePercentage               = 57.513135
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 14.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 194.400000
ship/passiveShieldEffectiveRechargeRate      = 68.965516
ship/passiveShieldRechargeRate               = 50.000000
ship/ehp                                     = 1806551.538462
ship/shieldThermalDamageEffectiveResonance   = 0.200000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.250000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.162500
ship/armorKineticDamageEffectiveResonance    = 0.162500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.125000
ship/shieldEhp                               = 413793.098345
ship/hullEhp                                 = 522388.046689
ship/armorEhp                                = 870370.393427
ship/shieldDamageEffectiveResonance          = 0.725000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.675000
ship/powerFree                               = 931250.000000
ship/cpuFree                                 = 900.000000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 26.702881
ship/capacitorPeakDelta                      = 17.810716
ship/capacitorPeakLoad                       = 48.888889
ship/capacitorPeakRecharge                   = 66.699605
ship/alignTime                               = 30.318256
ship/hp                                      = 350000.000000
ship/powerOutput                             = 1031250.000000
ship/powerLoad                               = 100000.000000
ship/maxVelocity                             = 100.000000
ship/cpuOutput                               = 1000.000000
ship/cpuLoad                                 = 100.000000
ship/rechargeRate                            = 3795000.000000
ship/agility                                 = 0.013669
ship/maxTargetRange                          = 5750000.000000
ship/scanSpeed                               = 5062.500000
ship/warpScrambleStatus                      = -25.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanMagnetometricStrength               = 194.400000
ship/shieldCapacity                          = 300000.000000
ship/armorHP                                 = 587500.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 15000000.000000
ship/capacitorCapacity                       = 101250.000000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 75.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveRange                          = 6.000000
ship/jumpDriveConsumptionAmount              = 1500.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.712500
ship/fighterCapacity                         = 137500.000000
ship/shipBonusSupercarrierG1                 = 50.000000
ship/shipBonusSupercarrierG2                 = 25.000000
ship/shipBonusSupercarrierG3                 = -25.000000
ship/shipBonusSupercarrierG4                 = -25.000000
ship/shipBonusSupercarrierG5                 = 10.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitJumpPassengerCount               = 30.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                                  = Sensor Dampening Burst Projector
high_1/state                                 = active
high_1/capacitorPeakLoad                     = 48.888889
high_1/cycleTime                             = 168750.000000
high_1/durationSensorDampeningBurstProjector = 168750.000000
